@@ -88,7 +88,7 @@ Notes on releasing.
 
 12. In the source tree do
 
-      cvs tag Release-v3-9-1
+      cvs tag Release-v3-9-2
 
     (or the appropriate name for the release)
 
