@@ -1,4 +1,4 @@
-# $Id: Makefile.am,v 1.16.2.1 2007-07-13 13:40:12 dron Exp $
+# $Id: Makefile.am,v 1.16.2.2 2009-11-04 17:28:45 bfriesen Exp $
 #
 # Tag Image File Format (TIFF) Software
 #
@@ -74,7 +74,9 @@ docfiles = \
 	v3.8.0.html \
 	v3.8.1.html \
 	v3.8.2.html \
-	v3.9.0beta.html
+	v3.9.0beta.html \
+	v3.9.1.html \
+	v3.9.2.html
 
 dist_doc_DATA = $(docfiles)
 
