@@ -24,7 +24,7 @@
     </tr>
     <tr>
       <th>Latest Stable Release</th>
-      <td><a href="v3.9.1.html">v3.9.1</a></td>
+      <td><a href="v3.9.2.html">v3.9.2</a></td>
     </tr>
     <tr>
       <th>Master Download Site</th>
@@ -117,7 +117,7 @@ Joris Van Damme and Lee Howard.
   </ul>
   <hr>
   <p>
-    Last updated  $Date: 2009-08-28 16:24:13 $.
+    Last updated  $Date: 2009-11-04 17:28:46 $.
   </p>
 </body>
 </html>
